# AlphaPose-Cpp

./: .gitmodules  AlphaPose.cpp  AlphaPose.h  AlphaPoseTrt.cpp  AlphaPoseTrt.h  AlphaPoseTrt.sln  AlphaPoseTrt.vcxproj  AlphaPoseTrt.vcxproj.filters  CMakeLists.txt  Logger.h  README.md  common.h  convert_onnx.py  convert_torchscript.py  json.hpp  main.cpp
.dvc/: config
model-zoo/fast_pose_res152/: .gitignore  fast_421_res152_256x192.engine.dvc  fast_421_res152_256x192.jit.dvc  fast_421_res152_256x192.onnx.dvc  fast_421_res152_256x192.pth.dvc
model-zoo/fast_pose_res50/: .gitignore  fast_res50_256x192.engine.dvc  fast_res50_256x192.jit.dvc  fast_res50_256x192.onnx.dvc  fast_res50_256x192.pth.dvc  fast_res50_256x192_dynamic.onnx.dvc  fast_res50_256x192_fp16_dynamic.engine.dvc  fast_res50_256x192_fp16_dynamic_wins.engine.dvc
x64/Release/: cudnn64_8.dll.dvc  cudnn_cnn_infer64_8.dll.dvc  nvinfer.dll.dvc  nvinfer_builder_resource.dll.dvc  nvinfer_plugin.dll.dvc  nvonnxparser.dll.dvc  nvparsers.dll.dvc  opencv_aruco452.dll.dvc  opencv_calib3d452.dll.dvc  opencv_core452.dll.dvc  opencv_highgui452.dll.dvc  opencv_imgcodecs452.dll.dvc  opencv_imgproc452.dll.dvc
